--- a/app/about/about.css
+++ b/app/about/about.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   height: 100vh;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   align-items: center;
 }
