--- a/app/globals.css
+++ b/app/globals.css
@@ -14,13 +14,24 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   box-sizing: border-box;
-  /* padding: 10px; */
-  position: absolute;
+  position: static;
   top: 0;
   right: 10px;
   height: 75px;
   margin: 0px !important;
+}
+.fake-navbar a {
+  text-decoration: none !important;
+}
+
+.home-page-container {
+  width: 100%;
+  height: 100%;
+  /* margin-top: 80px; */
+  display: flex;
+  align-items: flex-end;
 }
 
 .navbar-logo {
@@ -79,9 +90,6 @@ label {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 0;
-  left: 0;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -101,12 +109,12 @@ label {
   height: 8px;
 }
 
-.page-container,
+/* .page-container,
 .profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
 .form-check,
 .details {
