--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
   --color5: rgb(183, 227, 168);
 }
 
+.amp-1 {
+  margin: 0;
+}
+
 .fake-navbar {
   width: 100%;
   display: flex;
@@ -29,7 +33,8 @@
 .home-page-container {
   width: 100%;
   height: 100%;
-  /* margin-top: 80px; */
+  max-width: 1500px;
+  overflow: hidden;
   display: flex;
   align-items: flex-end;
 }
