--- a/app/styles/footer.css
+++ b/app/styles/footer.css
@@ -21,7 +21,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 footer {
