--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,17 @@
   outline: 1px solid red;
 } */
 
-:root {
+/* :root {
   --color1: rgb(251, 120, 106);
   --color2: rgb(246, 179, 91);
   --color3: rgb(153, 161, 168);
   --color4: rgb(212, 180, 124);
   --color5: rgb(183, 227, 168);
-}
+} */
 
 .amp-1 {
   margin: 0;
+  height: auto !important;
 }
 
 .fake-navbar {
@@ -31,12 +32,17 @@
 }
 
 .home-page-container {
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   max-width: 1500px;
   overflow: hidden;
   display: flex;
   align-items: flex-end;
+  min-height: auto; */
+  width: 100%;
+  display: block; /* Change from 'flex' to 'block' to let it expand naturally */
+  overflow: hidden; /* Keep this to prevent overflow */
+  min-height: auto; /* Ensure the minimum height adjusts based on content */
 }
 
 .navbar-logo {
@@ -114,12 +120,12 @@ label {
   height: 8px;
 }
 
-/* .page-container,
+.page-container,
 .profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-} */
+}
 
 .form-check,
 .details {
@@ -309,37 +315,4 @@ body.modal-open {
   z-index: 4;
   margin: 0;
   border-radius: 3px 3px 0 0;
-}
-
-@media screen and (max-width: 800px) {
-  .scroll-search-results {
-    width: 100%;
-    overflow: hidden !important;
-    flex-direction: column;
-    min-height: 1300px !important;
-    justify-content: center;
-    margin: 0;
-    padding: 0 !important;
-    justify-content: flex-start !important;
-  }
-
-  .scroll-search-results ul {
-    flex-direction: column;
-    margin: 0 !important;
-    align-items: center;
-    margin: 0 !important;
-  }
-
-  .movie-scroll-labels {
-    flex-direction: column;
-  }
-
-  .fake-navbar {
-    height: 75px !important;
-    position: relative !important;
-  }
-}
-
-.sticker {
-  display: none !important;
 }
